# canonical-angularcli-app

./: BUILD.bazel  WORKSPACE
