package(default_visibility = ["//visibility:public"])

alias(
    name = "install",
    actual = "@nodejs//:yarn",
)

# This export allows targets in other packages to reference files that live
# in this package.
exports_files([
    "tsconfig.json",
])

alias(
    name = "node_modules",
    actual = "@npm//:node_modules",
)

